src/css/tail_main.css
/* ... */
.main-description {
  @media (width >= 48rem) {
    padding-right: calc(var(--spacing) * 2.5);
  }
  @media (width >= 48rem) {
    padding-left: calc(var(--spacing) * 2.5);
  }
}
.bible-text {
  text-align: left;
  @media (width >= 48rem) {
    text-align: right;
  }
}
.bible-verse {
  text-align: left;
  opacity: 62.5%;
  @media (width >= 48rem) {
    text-align: right;
  }
}
.content-section-header {
  margin-top: calc(var(--spacing) * 5);
  margin-bottom: calc(var(--spacing) * 2.5);
  font-size: 1.0625em;
  --tw-font-weight: var(--font-weight-semibold);
  font-weight: var(--font-weight-semibold);
  color: var(--color-green-100);
  --tw-gradient-position: to left in oklab;
  background-image: linear-gradient(var(--tw-gradient-stops));
  --tw-gradient-from: var(--color-sky-100);
  --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
  --tw-gradient-via: var(--color-yellow-100);
  --tw-gradient-via-stops: var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-via-stops);
  --tw-gradient-to: var(--color-green-100);
  --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
  background-clip: text;
  color: transparent;
  @media (width >= 48rem) {
    padding-right: calc(var(--spacing) * 2.5);
  }
  @media (width >= 48rem) {
    padding-left: calc(var(--spacing) * 2.5);
  }
  animation: main-name-animation 7.5s linear infinite;
  background-size: 200% 200%;
}
.content-section-header-portfolio {
  font-size: 1.0625em;
  --tw-font-weight: var(--font-weight-semibold);
  font-weight: var(--font-weight-semibold);
  color: var(--color-green-100);
  --tw-gradient-position: to left in oklab;
  background-image: linear-gradient(var(--tw-gradient-stops));
  --tw-gradient-from: var(--color-sky-100);
  --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
  --tw-gradient-via: var(--color-yellow-100);
  --tw-gradient-via-stops: var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
  --tw-gradient-stops: var(--tw-gradient-via-stops);
  --tw-gradient-to: var(--color-green-100);
  --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
  background-clip: text;
  color: transparent;
  animation: main-name-animation 7.5s linear infinite;
  background-size: 200% 200%;
}
.links-container {
  display: flex;
  align-items: center;
  column-gap: calc(var(--spacing) * 5);
  justify-content: flex-start;
  @media (width >= 48rem) {
    justify-content: flex-end;
  }
}
.link-icon-button {
  border-radius: var(--radius-md);
  color: var(--color-green-100);
  transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
  transition-duration: var(--tw-duration, var(--default-transition-duration));
  --tw-duration: 750ms;
  transition-duration: 750ms;
  &:hover {
    @media (hover: hover) {
      color: var(--color-amber-100);
    }
  }
}
.link-icon {
  height: calc(var(--spacing) * 8);
  width: calc(var(--spacing) * 8);
  fill: currentcolor;
  transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
  transition-duration: var(--tw-duration, var(--default-transition-duration));
  --tw-duration: 750ms;
  transition-duration: 750ms;
  &:hover {
    @media (hover: hover) {
      opacity: 80%;
    }
  }
  opacity: 0.75;
}
.content-link-icon {
  margin-left: calc(var(--spacing) * 1);
  height: calc(var(--spacing) * 4);
  width: calc(var(--spacing) * 4);
  color: var(--color-amber-50);
}
.about-container {
  display: flex;
  flex-direction: column;
  row-gap: calc(var(--spacing) * 5);
  border-radius: var(--radius-xl);
  border-style: var(--tw-border-style);
  border-width: 0.125px;
  border-color: color-mix(in srgb, oklch(98.7% 0.022 95.277) 25%, transparent);
  @supports (color: color-mix(in lab, red, red)) {
    border-color: color-mix(in oklab, var(--color-amber-50) 25%, transparent);
  }
  padding-right: calc(var(--spacing) * 3);
  padding-bottom: calc(var(--spacing) * 5);
  padding-left: calc(var(--spacing) * 3);
}
/* ... */

